--- a/trunk/datapack_development/data/scripts/teleports/2211_HuntingGroundsTeleport/hg_heine.htm
+++ b/trunk/datapack_development/data/scripts/teleports/2211_HuntingGroundsTeleport/hg_heine.htm
@@ -1,12 +1,7 @@
-<html> 
-<body><font color="LEVEL">[ Teleport to Hunting Grounds ]</font><br>
-You may teleport to any of the following hunting locations. Each teleport requires a sum of ancient adena.<br>
-<a action="bypass -h npc_%objectId%_SevenSigns 11 107514 174329 -3704 740">Worshipers Necropolis - 740 Ancient Adena</a><br>
-<a action="bypass -h npc_%objectId%_SevenSigns 11 45600 126944 -3680 1800">Pilgrims Necropolis - 1800 Ancient Adena</a><br>
-<a action="bypass -h npc_%objectId%_SevenSigns 11 39232 143568 -3648 1600">Heretics Catacomb - 1600 Ancient Adena</a><br>
-<a action="bypass -h npc_%objectId%_SevenSigns 11 43200 170688 -3248 1300">Catacomb of the Branded - 1300 Ancient Adena</a><br>
-<a action="bypass -h npc_%objectId%_SevenSigns 11 79296 209584 -3704 550">Saints Necropolis - 550 Ancient Adena</a><br>
-<a action="bypass -h npc_%objectId%_SevenSigns 11 72624 180224 -3040 900">Field of Silence - 900 Ancient Adena</a><br>
-<a action="bypass -h npc_%objectId%_SevenSigns 11 96528 222688 -3168 240">Field of Whispers - 240 Ancient Adena</a><br>
-<a action="bypass -h npc_%objectId%_SevenSigns 11 108704 193008 -3680 440">Entrance to Alligator Island - 440 Ancient Adena</a><br>
-<a action="bypass -h npc_%objectId%_SevenSigns 11 85087 232473 -3640 480">Southern Shore of Innadrill (Garden of Eva) - 480 Ancient Adena</a><br></body></html>
+<html><body>&$556;<br><br>
+<a action="bypass -h npc_%objectId%_SevenSigns 11 107514 174329 -3704 5500">Necropolis of Worship - 5500 Ancient Adena</a><br1>
+<a action="bypass -h npc_%objectId%_SevenSigns 11 45600 126944 -3680 13000">The Pilgrim's Necropolis - 13000 Ancient Adena</a><br1>
+<a action="bypass -h npc_%objectId%_SevenSigns 11 39232 143568 -3648 12000">The Catacomb of the Heretic - 12000 Ancient Adena</a><br1>
+<a action="bypass -h npc_%objectId%_SevenSigns 11 43200 170688 -3248 13000">Catacomb of the Branded - 13000 Ancient Adena</a><br1>
+<a action="bypass -h npc_%objectId%_SevenSigns 11 79296 209584 -3704 9600">The Saint's Necropolis - 9600 Ancient Adena</a>
+</body></html>
