--- a/trunk/datapack_development/data/html/admin/tele/raid/raid_80.htm
+++ b/trunk/datapack_development/data/html/admin/tele/raid/raid_80.htm
@@ -27,7 +27,5 @@
 <a action="bypass -h admin_move_to 105584 -43024 -1728"><font color="6697FF">Varka's Chief Horus </font><font color="CC0000">(87)</font></a><br>
 <a action="bypass -h admin_move_to 142368 -82512 -6487"><font color="6697FF">Soul Of Fire Nastron </font><font color="CC0000">(87)</font></a><br>
 <a action="bypass -h admin_move_to 105452 -36775 -1050"><font color="6697FF">Soul Of Water Ashutar </font><font color="CC0000">(87)</font></a><br>
-<a action="bypass -h admin_move_to 113000 -76000 200"><font color="6697FF">Master Anays </font><font color="CC0000">(87)</font></a><br>
-<a action="bypass -h admin_move_to -16382 -53450 -10432"><font color="6697FF">High Priestess Van Halter </font><font color="CC0000">(87)</font></a><br>
-<a action="bypass -h admin_move_to 26528 -8244 -20"><font color="6697FF">Sailren </font><font color="CC0000">(87)</font></a>
+<a action="bypass -h admin_move_to 113000 -76000 200"><font color="6697FF">Master Anays </font><font color="CC0000">(87)</font></a>
 </body></html>
