--- a/trunk/datapack_development/data/html/admin/tele/raid/raid_special.htm
+++ b/trunk/datapack_development/data/html/admin/tele/raid/raid_special.htm
@@ -1,15 +1,13 @@
-<html><body><table width=260><tr><td width=40><button value="Main" action="bypass -h admin_admin" width=40 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td><td width=180><center>Special Raid Boss</center></td><td width=40><button value="Back" action="bypass -h admin_help tele/raid.htm" width=40 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td></tr></table><br>
+<html><body><table width=260><tr><td width=40><button value="Main" action="bypass -h admin_admin" width=40 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td><td width=180><center>Special RaidBoss</center></td><td width=40><button value="Back" action="bypass -h admin_help tele/raid.htm" width=40 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td></tr></table><br>
 <br><font color="LEVEL">
-<a action="bypass -h admin_move_to -21610 181594 -5734 ">Queen Ant (40)</a><br1>
-<a action="bypass -h admin_move_to 17726 108915 -6480 ">Core (50)</a><br1>
-<a action="bypass -h admin_move_to 43728 17220 -4342 ">Orfen (50)</a><br1>
-<a action="bypass -h admin_move_to 55312 219168 -3223 ">Zaken (60)</a><br1>
-<a action="bypass -h admin_move_to 115213 16623 10080 ">Baium (75)</a><br1>
+<a action="bypass -h admin_move_to 102800 -126000 -2500 ">Ice Fairy Sirra (60)</a><br1>
 <a action="bypass -h admin_move_to 11882 -49216 -3008 ">Benom (75)</a><br1>
-<a action="bypass -h admin_move_to 185708 114298 -8221 ">Antharas (79)</a><br1>
-<a action="bypass -h admin_move_to 213896 -115436 -1644 ">Valakas (85)</a><br1>
+<a action="bypass -h admin_move_to 184410 -10111 -5488 ">Lilith (80)</a><br1>
+<a action="bypass -h admin_move_to 185000 -13000 -5488 ">Anakim (80)</a><br1>
+<a action="bypass -h admin_move_to -16382 -53450 -10432 ">Andreas Van Halter (80)</a><br1>
+<a action="bypass -h admin_move_to 141569 -45908 -2387 ">Gordon (80)</a><br1>
+<a action="bypass -h admin_move_to 26528 -8244 -20">Sailren (80)</a><br>
 <a action="bypass -h admin_move_to 19897 -9087 -2781 ">Tyrannosaurus (87)</a><br1>
 <a action="bypass -h admin_move_to 22827 -14698 -3080 ">Tyrannosaurus (87)</a><br1>
-<a action="bypass -h admin_move_to 26174 -17134 -2747 ">Tyrannosaurus (87)</a><br1>
-<a action="bypass -h admin_move_to 174238 -89532 -5192 ">Scarlet van Halisha (90)</a></font>
+<a action="bypass -h admin_move_to 26174 -17134 -2747 ">Tyrannosaurus (87)</a>
 </body></html>
