--- a/trunk/datapack_development/data/scripts/village_master/9000_clan/9000-03.htm
+++ b/trunk/datapack_development/data/scripts/village_master/9000_clan/9000-03.htm
@@ -2,19 +2,19 @@
 Clan level can be raised. Raising a clan's level requires the following:<br>
 Level 1 - SP: 20,000; Adena: 650,000<br>
 Level 2 - SP: 100,000; Adena: 2,500,000<br>
-Level 3 - SP : 350,000; Item: Blood Oath<br>
-Level 4 - SP: 1,000,000; Item: Blood Alliance<br>
+Level 3 - SP : 350,000; Item: Blood Mark<br>
+Level 4 - SP: 1,000,000; Item: Alliance Manifesto<br>
 Level 5 - SP: 2,500,000; Item: Seal of Aspiration<br>
 Level 6 - Clan Reputation: 10,000; Clan Membership: More than 30<br>
 Level 7 - Clan Reputation: 20,000; Clan Membership: More than 80<br>
 Level 8 - Clan Reputation: 40,000; Clan Membership: More than 120<br>
-Level 9 - Clan Reputation: 40,000; Clan Membership: More than 120; Item: 150 Blood Oaths<br>
-Level 10 - Clan Reputation: 40,000; Clan Membership: More than 140; Item: 5 Determination of Blood<br>
-You can obtain Blood Oath by capturing the Bloody Queen in Dragon Valley.<br>
-To obtain Blood Alliance, seek out Sir Christopher Rodemai of Giran. <br>
-To obtain Seal of Aspiration, seek out Sir Gustav Athebaldt in the Town of Oren. <br>
-To obtain the Blood Oath, you must possess a fortress and prove that your territories are being protected. <br>
-To obtain the Blood Alliance, you must possess a castle and prove that your territories are being protected and your citizens are being cared for. <br>
+Level 9 - Clan Reputation: 40,000; Clan Membership: More than 120; Item: 150 Blood Oath<br>
+Level 10 - Clan Reputation: 40,000; Clan Membership: More than 140; Item: 5 Blood Alliance<br>
+You can obtain Blood Mark by capturing the Bloody Queen in Dragon Valley.<br>
+To obtain Alliance Manifesto, seek out Sir Christopher Rodemai of Giran.<br>
+To obtain Seal of Aspiration, seek out Sir Gustav Athebaldt in the Town of Oren.<br>
+To obtain the Blood Oath, you must possess a fortress and prove that your territories are being protected.<br>
+To obtain the Blood Alliance, you must possess a castle and prove that your territories are being protected and your citizens are being cared for.<br>
 <a action="bypass -h Quest 9000_clan 9000-16.htm">How to improve Clan Reputation.</a><br>
 <button value="Level Up" action="bypass -h npc_%objectId%_increase_clan_level" width=80 height=27 back="L2UI_CT1.Button_DF_Down" fore="L2UI_CT1.Button_DF">
 <button value="Cancel" action="bypass -h Quest 9000_clan 9000-01.htm" width=80 height=27 back="L2UI_CT1.Button_DF_Down" fore="L2UI_CT1.Button_DF">
