--- a/trunk/datapack_development/data/html/admin/fort.htm
+++ b/trunk/datapack_development/data/html/admin/fort.htm
@@ -8,36 +8,36 @@
 <br><br><br>Fort: %fortName%<br><br>
 <table width=270>
 <tr>
-<td><button value="Add Attacker" action="bypass -h admin_add_fortattacker %fortName%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Add Defender" action="bypass -h admin_add_fortdefender %fortName%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Add Attacker" action="bypass -h admin_add_fortattacker %fortId%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Add Defender" action="bypass -h admin_add_fortdefender %fortId%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr><tr>
-<td><button value="List Clans" action="bypass -h admin_list_fortsiege_clans %fortName%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Clear List" action="bypass -h admin_clear_fortsiege_list %fortName%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="List Clans" action="bypass -h admin_list_fortsiege_clans %fortId%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Clear List" action="bypass -h admin_clear_fortsiege_list %fortId%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr>
 </table>
 <br>
 <table width=270>
 <tr>
-<td><button value="Move Defenders" action="bypass -h admin_move_fortdefenders %fortName%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Spawn Doors" action="bypass -h admin_spawn_fortdoors %fortName%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Move Defenders" action="bypass -h admin_move_fortdefenders %fortId%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Spawn Doors" action="bypass -h admin_spawn_fortdoors %fortId%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr>
 </table>
 <br>
 <table width=270>
 <tr>
-<td><button value="Start Siege" action="bypass -h admin_startfortsiege %fortName%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="End Siege" action="bypass -h admin_endfortsiege %fortName%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Start Siege" action="bypass -h admin_startfortsiege %fortId%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="End Siege" action="bypass -h admin_endfortsiege %fortId%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr>
 </table>
 <br>
 <table width=270>
-<tr><td><button value="Give Fort" action="bypass -h admin_setfort %fortName%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Remove Fort" action="bypass -h admin_removefort %fortName%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td></tr>
+<tr><td><button value="Give Fort" action="bypass -h admin_setfort %fortId%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Remove Fort" action="bypass -h admin_removefort %fortId%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td></tr>
 </tr>
 </table>
 <br>
 <table width=270>
-<tr><td width=60>NpcId:</td><td><edit var="value" width=40></td><td><button value="Add Guard" action="bypass -h admin_add_guard %fortName% $value" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<tr><td width=60>NpcId:</td><td><edit var="value" width=40></td><td><button value="Add Guard" action="bypass -h admin_add_guard %fortId% $value" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr></table>
 </center>
 </body></html>
@@ -51,36 +51,36 @@
 <br><br><br>Fort: %fortName%<br><br>
 <table width=270>
 <tr>
-<td><button value="Add Attacker" action="bypass -h admin_add_fortattacker %fortName%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Add Defender" action="bypass -h admin_add_fortdefender %fortName%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Add Attacker" action="bypass -h admin_add_fortattacker %fortId%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Add Defender" action="bypass -h admin_add_fortdefender %fortId%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr><tr>
-<td><button value="List Clans" action="bypass -h admin_list_fortsiege_clans %fortName%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Clear List" action="bypass -h admin_clear_fortsiege_list %fortName%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="List Clans" action="bypass -h admin_list_fortsiege_clans %fortId%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Clear List" action="bypass -h admin_clear_fortsiege_list %fortId%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr>
 </table>
 <br>
 <table width=270>
 <tr>
-<td><button value="Move Defenders" action="bypass -h admin_move_fortdefenders %fortName%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Spawn Doors" action="bypass -h admin_spawn_fortdoors %fortName%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Move Defenders" action="bypass -h admin_move_fortdefenders %fortId%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Spawn Doors" action="bypass -h admin_spawn_fortdoors %fortId%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr>
 </table>
 <br>
 <table width=270>
 <tr>
-<td><button value="Start Siege" action="bypass -h admin_startfortsiege %fortName%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="End Siege" action="bypass -h admin_endfortsiege %fortName%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Start Siege" action="bypass -h admin_startfortsiege %fortId%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="End Siege" action="bypass -h admin_endfortsiege %fortId%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr>
 </table>
 <br>
 <table width=270>
-<tr><td><button value="Give Fort" action="bypass -h admin_setfort %fortName%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Remove Fort" action="bypass -h admin_removefort %fortName%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td></tr>
+<tr><td><button value="Give Fort" action="bypass -h admin_setfort %fortId%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Remove Fort" action="bypass -h admin_removefort %fortId%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td></tr>
 </tr>
 </table>
 <br>
 <table width=270>
-<tr><td width=60>NpcId:</td><td><edit var="value" width=40></td><td><button value="Add Guard" action="bypass -h admin_add_guard %fortName% $value" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<tr><td width=60>NpcId:</td><td><edit var="value" width=40></td><td><button value="Add Guard" action="bypass -h admin_add_guard %fortId% $value" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr></table>
 </center>
 </body></html>
@@ -94,36 +94,36 @@
 <br><br><br>Fort: %fortName%<br><br>
 <table width=270>
 <tr>
-<td><button value="Add Attacker" action="bypass -h admin_add_fortattacker %fortName%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Add Defender" action="bypass -h admin_add_fortdefender %fortName%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Add Attacker" action="bypass -h admin_add_fortattacker %fortId%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Add Defender" action="bypass -h admin_add_fortdefender %fortId%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr><tr>
-<td><button value="List Clans" action="bypass -h admin_list_fortsiege_clans %fortName%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Clear List" action="bypass -h admin_clear_fortsiege_list %fortName%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="List Clans" action="bypass -h admin_list_fortsiege_clans %fortId%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Clear List" action="bypass -h admin_clear_fortsiege_list %fortId%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr>
 </table>
 <br>
 <table width=270>
 <tr>
-<td><button value="Move Defenders" action="bypass -h admin_move_fortdefenders %fortName%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Spawn Doors" action="bypass -h admin_spawn_fortdoors %fortName%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Move Defenders" action="bypass -h admin_move_fortdefenders %fortId%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Spawn Doors" action="bypass -h admin_spawn_fortdoors %fortId%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr>
 </table>
 <br>
 <table width=270>
 <tr>
-<td><button value="Start Siege" action="bypass -h admin_startfortsiege %fortName%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="End Siege" action="bypass -h admin_endfortsiege %fortName%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Start Siege" action="bypass -h admin_startfortsiege %fortId%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="End Siege" action="bypass -h admin_endfortsiege %fortId%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr>
 </table>
 <br>
 <table width=270>
-<tr><td><button value="Give Fort" action="bypass -h admin_setfort %fortName%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Remove Fort" action="bypass -h admin_removefort %fortName%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td></tr>
+<tr><td><button value="Give Fort" action="bypass -h admin_setfort %fortId%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Remove Fort" action="bypass -h admin_removefort %fortId%" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td></tr>
 </tr>
 </table>
 <br>
 <table width=270>
-<tr><td width=60>NpcId:</td><td><edit var="value" width=40></td><td><button value="Add Guard" action="bypass -h admin_add_guard %fortName% $value" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<tr><td width=60>NpcId:</td><td><edit var="value" width=40></td><td><button value="Add Guard" action="bypass -h admin_add_guard %fortId% $value" width=80 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr></table>
 </center>
 </body></html>
