--- a/trunk/datapack_development/data/html/fortress/merchant-1.htm
+++ b/trunk/datapack_development/data/html/fortress/merchant-1.htm
@@ -15,7 +15,7 @@ You could hire our mercenaries, and with our
 help I'm sure you'd be able to capture the 
 fortress. Do you want to try? 
 <br>
-<a action="bypass -h npc_%objectId%_showSiegeInfo">Register fortress siege warfare.</a><br>
+<a action="bypass -h npc_%objectId%_register">Register fortress siege warfare.</a><br>
 <a action="bypass -h npc_%objectId%_showSiegeInfo">Cancel registration.</a><br>
 <a action="bypass -h npc_%objectId%_Chat 3">Ask about fortress siege warfare.</a><br>
 <a action="bypass -h npc_%objectId%_Chat 2">"Tell me more about the fortress."</a><br>
