--- a/trunk/datapack_development/data/scripts/quests/419_GetAPet/419_bella_2.htm
+++ b/trunk/datapack_development/data/scripts/quests/419_GetAPet/419_bella_2.htm
@@ -1,9 +1,6 @@
-<html><body>Gatekeeper Bella:<br>
-Pets can be very useful creatures.<br>
-If you are unable to carry items due to space or weight restrictions, 
-you can transfer items to your pet and they will carry them for you. 
-Bear in mind that they cannot run errands.<br>
-If your pet is killed it may be resurrected within 
-<font color="LEVEL">20 minutes</font>. 
-If it is not revived within the time limit, the pet will be gone forever.<br>
-<a action="bypass -h Quest 419_GetAPet talk2">Next</a></body></html>
+<html><body>Gatekeeper Belladonna:<br>
+Pets help their owners in a number of ways.<br>
+If your inventory is low or you have exceeded your weight limit, you can use your pets to carry some of your items. Just be careful not to use your pets too often on errands, no matter how useful may be.<br>
+There is also something important to keep in mind when raising a pet. You can resurrect dead pets once, but there is a time limit in which to do so. If you do not resurrect pets within 
+<font color="LEVEL">24 hours</font>, they will disappear forever. That would be very unfortable...<br>
+<a action="bypass -h Quest 419_GetAPet talk2">Next.</a></body></html>
