--- a/trunk/datapack_development/data/html/default/32291.htm
+++ b/trunk/datapack_development/data/html/default/32291.htm
@@ -2,5 +2,5 @@
 You have a keen eye for the truth.<br>
 The last gift is the Contaminated Crystal, which can hide you from the eyes of the Demons. This crystal will allow you to enter the <font color="LEVEL">Crystal Caverns</font> under Crystal Lake without being detected.<br>
 Now that you have completed the trial, I shall return you to where you came from.<br>
-<a action="bypass -h npc_%objectId%_Chat 0">Leave Dark Cloud Mansion.</a>
+<a action="bypass -h npc_%objectId%_Quest DarkCloudMansion">Leave Dark Cloud Mansion.</a>
 </body></html>
