--- a/trunk/datapack_development/data/html/common/augmentation_01.htm
+++ b/trunk/datapack_development/data/html/common/augmentation_01.htm
@@ -1,4 +1,4 @@
-<html><<body><br>
+<html><body><br>
 Smelting allows you to infuse different energy to weapons or accessories. Of course, Soul Crystals can also grant special abilities. But this is a simpler way. It may not be as reliable, however...<br>
 A few days ago, an ore called the <font color="LEVEL">Stone of Life</font>, which has very similar characteristics to Soul Crystals, was discovered. If you bring me the Stone of Life, the weapons you wish altered and a few other necessary items, I will smelt them.<br>
 Just remember that <font color="LEVEL">we don't know what kind of powers will be imbued after it smelting</font> because the Stone of Life has not been completely analyzed. Moreover, <font color="LEVEL">only the owner of the accessories and weapons may use them once they are smelted</font> since the Stone of Life is greatly influenced by its owner. In addition, <font color="LEVEL">any accessory or weapon that exceeds the owner's skill will not display the effect of smelting</font><br>
