--- a/trunk/datapack_development/data/scripts/quests/25_HidingBehindTheTruth/31535-04.htm
+++ b/trunk/datapack_development/data/scripts/quests/25_HidingBehindTheTruth/31535-04.htm
@@ -1,4 +1,4 @@
 <html><body>Broken Bookshelf:<br>
 It's a small Gem Box!  It's locked with a padlock bearing the mark of Rune Castle. <br>
-<a action="bypass -h menu_select?ask=25&reply=10"> Use a Gemstone Key. </a>
+<a action="bypass -h Quest 25_HidingBehindTheTruth 31535-05.htm"> Use a Gemstone Key. </a>
 </body></html>
