--- a/trunk/datapack_development/data/html/teleporter/32378.htm
+++ b/trunk/datapack_development/data/html/teleporter/32378.htm
@@ -7,5 +7,5 @@ You can earn <font color="LEVEL">Fantasy Isle Coins</font> by undertaking differ
 <a action="bypass -h npc_%objectId%_goto 12108">Move to Kratei's Cube.</a><br>
 <a action="bypass -h npc_%objectId%_goto 12121">Move to Handy's Block Checker Arena.</a><br>
 <a action="bypass -h npc_%objectId%_multisell 323780001">Exchange Fantasy Isle Coins.</a><br>
-<a action="bypass -h npc_%objectId%_Quest">Quest">Quest</a>
+<a action="bypass -h npc_%objectId%_Quest">Quest</a>
 </body></html>
