--- a/trunk/datapack_development/data/html/admin/teleports/town.htm
+++ b/trunk/datapack_development/data/html/admin/teleports/town.htm
@@ -30,7 +30,7 @@
 </tr>
 <tr>
 <td align=center><button action="bypass -h admin_help teleports/town/schuttgart.htm" value="Schuttgart" width=100 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td align=center><button action="bypass -h admin_help tele/town/heine.htm" value="Heine" width=100 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td align=center><button action="bypass -h admin_help teleports/town/heine.htm" value="Heine" width=100 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr>
 <tr>
 <td align=center><button action="bypass -h admin_help teleports/town/hv.htm" value="Hunters" width=100 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
