--- a/trunk/datapack_development/data/html/olympiad/olympiad_ranking.htm
+++ b/trunk/datapack_development/data/html/olympiad/olympiad_ranking.htm
@@ -1,16 +1,16 @@
 <html><body><center>Grand Olympiad Ranking
 <img src="L2UI.SquareWhite" width=270 height=1><img src="L2UI.SquareBlank" width=1 height=3>
 <table width=270 border=0 bgcolor="000000">
-<tr><td fixwidth=100 align=center>1</td><td fixwidth=170 align=center>%rank1%</td></tr>
-<tr><td fixwidth=100 align=center>2</td><td fixwidth=170 align=center>%rank2%</td></tr>
-<tr><td fixwidth=100 align=center>3</td><td fixwidth=170 align=center>%rank3%</td></tr>
-<tr><td fixwidth=100 align=center>4</td><td fixwidth=170 align=center>%rank4%</td></tr>
-<tr><td fixwidth=100 align=center>5</td><td fixwidth=170 align=center>%rank5%</td></tr>
-<tr><td fixwidth=100 align=center>6</td><td fixwidth=170 align=center>%rank6%</td></tr>
-<tr><td fixwidth=100 align=center>7</td><td fixwidth=170 align=center>%rank7%</td></tr>
-<tr><td fixwidth=100 align=center>8</td><td fixwidth=170 align=center>%rank8%</td></tr>
-<tr><td fixwidth=100 align=center>9</td><td fixwidth=170 align=center>%rank9%</td></tr>
-<tr><td fixwidth=100 align=center>10</td><td fixwidth=170 align=center>%rank10%</td></tr>
+<tr><td fixwidth=100 align=center>%place1%</td><td fixwidth=170 align=center>%rank1%</td></tr>
+<tr><td fixwidth=100 align=center>%place2%</td><td fixwidth=170 align=center>%rank2%</td></tr>
+<tr><td fixwidth=100 align=center>%place3%</td><td fixwidth=170 align=center>%rank3%</td></tr>
+<tr><td fixwidth=100 align=center>%place4%</td><td fixwidth=170 align=center>%rank4%</td></tr>
+<tr><td fixwidth=100 align=center>%place5%</td><td fixwidth=170 align=center>%rank5%</td></tr>
+<tr><td fixwidth=100 align=center>%place6%</td><td fixwidth=170 align=center>%rank6%</td></tr>
+<tr><td fixwidth=100 align=center>%place7%</td><td fixwidth=170 align=center>%rank7%</td></tr>
+<tr><td fixwidth=100 align=center>%place8%</td><td fixwidth=170 align=center>%rank8%</td></tr>
+<tr><td fixwidth=100 align=center>%place9%</td><td fixwidth=170 align=center>%rank9%</td></tr>
+<tr><td fixwidth=100 align=center>%place10%</td><td fixwidth=170 align=center>%rank10%</td></tr>
 </table>
 <img src="L2UI.SquareWhite" width=270 height=1> <img src="L2UI.SquareBlank" width=1 height=3>
 <table width=270 border=0 cellpadding=0 cellspacing=0>
