--- a/trunk/datapack_development/data/html/admin/teleports/instance.htm
+++ b/trunk/datapack_development/data/html/admin/teleports/instance.htm
@@ -17,5 +17,6 @@
 <button action="bypass -h admin_help teleports/instance/infi.htm" value="Tower of Infinitum" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
 <button action="bypass -h admin_help teleports/instance/naia.htm" value="Tower of Nani" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
 <button action="bypass -h admin_help teleports/instance/tully.htm" value="Tully's Workshop" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
+<button action="bypass -h admin_move_to 53322 246380 -6580" value="Underground Camp" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
 </center>
 </body></html>
